--- a/style.css
+++ b/style.css
@@ -105,8 +105,8 @@ header{
     background-color: black;
     transition: background-color 0.5s;
 }
-/* @media screen and (min-width: 1441px) {
+@media screen and (min-width: 1441px) {
     #contactUsLogo{
-     display: none;
+   
     }
-   } */
+   }
