--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
   max-width: 100%;
 }
 
+.outfit {
+  font-family: "Outfit", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 /* Üst Banner */
 .top-banner {
   background-color: #0b8e36;
@@ -37,66 +42,98 @@ body {
 /* Navbar */
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: white;
-  padding: 15px;
+  padding: 15px 3vw;
   color: black;
   position: fixed;
-  width: 100%;
+  width: 94%;
   top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1000;
   transition: background 0.3s ease-in-out;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  flex-wrap: nowrap;
-}
 
-.logo img {
-  height: 50px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.logo img:hover {
-  transform: scale(1.1);
 }
 
 .nav-links {
+  font-size: 1rem;
   list-style: none;
   display: flex;
-  gap: 20px;
+  justify-content: space-between;
+  gap: 4vw;
   flex-wrap: nowrap;
-  text-wrap: nowrap;
 }
-
 .nav-links a {
   text-decoration: none;
   color: black;
   padding: 10px 15px;
   border-radius: 5px;
-  transition: background 0.3s ease, transform 0.3s ease;
+  position: relative;
+  transition: color 0.4s ease-in-out;
+  text-align: center;
+
+}
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: #0b8e36;
+  transition: width 0.4s ease-in-out, left 0.4s ease-in-out;
+}
+.nav-links a:hover {
+  color: #0b8e36;
+}
+.nav-links a:hover::after {
+  width: 100%;
+  left: 0;
 }
 
-.nav-links a:hover {
-  background-color: #0b8e36;
-  color: white;
-  transform: scale(1.05);
+.logo img {
+  height: 70px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.logo img:hover {
+  transform: scale(1.2);
 }
 
 /* Hamburger Menü */
 .hamburger-menu {
   display: none;
   flex-direction: column;
-  cursor: pointer;
+  cursor: pointer;  
+  padding: 10px;
+  border-radius: 5px;
+}
+.hamburger-menu:hover {
+  transform: scale(1.1);
+  background-color: #0b8e36;
 }
 
 .hamburger-menu .bar {
-  width: 50px;
+  width: 30px;
   height: 3px;
   background-color: black;
-  margin: 5px 5px;
+  margin: 5px 0;
 }
 
 /* Responsive */
+@media screen and (max-width: 1024px) {
+  .navbar {
+      width: 100%;
+      padding: 15px 20px;
+  }
+  .nav-links {
+      gap: 3vw;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .nav-links {
       display: none;
@@ -108,6 +145,10 @@ body {
       width: 100%;
       padding: 10px 0;
       text-align: center;
+      gap: 2vw;
+      
+
+      
   }
   .nav-links.active {
       display: flex;
@@ -115,10 +156,10 @@ body {
   .hamburger-menu {
       display: flex;
   }
-  .navbar{
-    justify-content: space-between;
-    padding: 0 2px;
+  .logo img:hover { 
+    transform: none;
   }
+  
 }
 
 /* Hero Bölümü */
@@ -155,7 +196,7 @@ body {
   left: 50%;
   width: 50px;
   height: 50px;
-  background: url('assets/favicon.ico') no-repeat center center;
+  background: url('wifi-icon.png') no-repeat center center;
   background-size: contain;
-  transition: transform 0.01s ease-out;
+  transition: transform 0.1s ease-out;
 }
