--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
   cursor: pointer;  
   padding: 10px;
   border-radius: 5px;
-}
+}AV
 .hamburger-menu:hover {
   transform: scale(1.1);
   background-color: #0b8e36;
